# zpoline-rs

./: CLAUDE.md  Cargo.toml  README.md  TRAIT_HOOKS_USAGE.md  USAGE.md  test_program  test_program.rs
.claude/: settings.local.json
.claude_log/: dlmopen_completion_summary.md  dlmopen_implementation.md  dlmopen_verification.md  final_report.md  implementation_plan.md  implementation_progress.md  summary.md
zpoline_hook_api/: Cargo.toml
zpoline_hook_api/src/: lib.rs  syscall_hooks.rs
zpoline_hook_impl/: Cargo.toml
zpoline_hook_impl/src/: lib.rs
zpoline_hook_trait_example/: Cargo.toml
zpoline_hook_trait_example/src/: lib.rs
zpoline_loader/: Cargo.toml
zpoline_loader/src/: dlmopen.rs  init.rs  lib.rs  trampoline.rs
zpoline_rewriter/: Cargo.toml
zpoline_rewriter/src/: lib.rs  maps.rs  rewriter.rs
zpoline_samples/: Cargo.toml
zpoline_samples/examples/: simple_hooks.rs  trait_hooks.rs
zpoline_samples/src/: main.rs
